@@ -11,8 +11,9 @@ export CATALINA_BASE=/var/lib/tomcat7
 less /etc/default/tomcat7
 
 sudo gedit /etc/environment
-JAVA_HOME="/usr/lib/jvm/jdk1.7.0"
-JRE_HOME="/usr/lib/jvm/jdk1.7.0/jre"
+#JAVA_HOME="/usr/lib/jvm/jdk1.7.0"
+JAVA_HOME="/usr/lib/jvm/java-1.7.0-openjdk-i386"
+JRE_HOME="/usr/lib/jvm/java-1.7.0-openjdk-i386/jre"
 PATH="...(other path):$JAVA_HOME:$JRE_HOME"
 PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:$JAVA_HOME:$JRE_HOME"
 
@@ -22,7 +23,7 @@ http://localhost:8280/
 http://localhost:8280/manager/html/
 http://localhost:8280/host-manager/html
 
-#sudo gedit /usr/share/tomcat7/conf/tomcat-users.xml
+#sudo gedit /etc/tomcat7/tomcat-users.xml
 <role rolename="manager-gui"/>
 <role rolename="manager-script"/>
 <role rolename="manager"/>
@@ -32,7 +33,6 @@ http://localhost:8280/host-manager/html
 
 <user username="votre-login" password="votre-mot-de-passe" roles="manager-gui,admin-gui,manager,admin,manager-script,admin-script"/>
 
-/etc/tomcat7/tomcat-users.xml
 
 sudo chgrp -R tomcat7 /etc/tomcat7
 sudo chmod -R g+w /etc/tomcat7
@@ -48,7 +48,11 @@ sudo ln -s /var/log/tomcat7 logs
 #sudo /usr/share/tomcat7/bin/startup.sh
 sudo gedit /etc/init.d/tomcat7
 add before catalina_sh
-JAVA_HOME="/usr/lib/jvm/jdk1.7.0"
+#JAVA_HOME="/usr/lib/jvm/jdk1.7.0"
+JAVA_HOME="/usr/lib/jvm/java-1.7.0-openjdk-i386"
+add before # OS specific support.  
+JAVA_OPTS="-Djava.awt.headless=true -Dfile.encoding=UTF-8 -server -Xms1536m -Xmx1536m -XX:NewSize=256m -XX:MaxNewSize=256m -XX:PermSize=256m -XX:MaxPermSize=256m -XX:+DisableExplicitGC -XX:+CMSClassUnloadingEnabled -XX:+CMSPermGenSweepingEnabled -Dnabla.config=/var/lib/tomcat7/webapps/nabla.properties"
+#TODO : or do it in /etc/default/tomcat7
 
 sudo /etc/init.d/tomcat7 restart
 sudo service tomcat7 restart
